--- a/css/style.css
+++ b/css/style.css
@@ -145,22 +145,22 @@ ul#nav li a
   font: bold 120% Arial, Helvetica, sans-serif;
   height: 24px;
   margin: 10px 0 0 20px;
-  text-shadow: 0px -1px 0px #000;
+  text-shadow: 0px 0px 0px #3366FF;
   padding: 6px 20px 0 20px;
   background: transparent; 
   border-radius: 7px 7px 7px 7px;
   -moz-border-radius: 7px 7px 7px 7px;
   -webkit-border: 7px 7px 7px 7px;
   text-align: center;
-  color: #FFF;
+  color: #000;
   text-decoration: none;} 
   
 ul#nav li.current a, ul#nav li:hover a
-{ color: #000;
-  background: #CCC;
-  background: -moz-linear-gradient(#FFF, #BBB);
-  background: -o-linear-gradient(#FFF, #BBB);
-  background: -webkit-linear-gradient(#FFF, #BBB);  
+{ color: #FFF;
+  background: #222;
+  background: -moz-linear-gradient(#222, #555);
+  background: -o-linear-gradient(#222, #555);
+  background: -webkit-linear-gradient(#222, #555);  
   text-shadow: none;}
 
 #site_content
