--- a/css/dropit.css
+++ b/css/dropit.css
@@ -9,7 +9,8 @@
 
 /* These styles assume you are using ul and li */
 .dropit {
-    list-style: none;
+	color: green;
+	list-style: none;
 	padding: 0;
 	margin: 0;
 }
