--- a/css/dropit.css
+++ b/css/dropit.css
@@ -9,7 +9,7 @@
 
 /* These styles assume you are using ul and li */
 .dropit {
-	color: green;
+	color: #000000;
 	list-style: none;
 	padding: 0;
 	margin: 0;
