--- a/css/dropit.css
+++ b/css/dropit.css
@@ -9,11 +9,14 @@
 
 /* These styles assume you are using ul and li */
 .dropit {
-	color: #000000;
+	color: blue;
 	list-style: none;
 	padding: 0;
 	margin: 0;
 }
+
+.menu {color: #00FF99;}
+
 .dropit .dropit-trigger { position: relative; }
 .dropit .dropit-submenu {
     position: absolute;
