--- a/css/dropit.css
+++ b/css/dropit.css
@@ -15,7 +15,7 @@
 	margin: 0;
 }
 
-.menu {color: #00FF99;}
+.stuff {color: #00FF99;}
 
 .dropit .dropit-trigger { position: relative; }
 .dropit .dropit-submenu {
