--- a/css/dropit.css
+++ b/css/dropit.css
@@ -14,7 +14,7 @@
 	margin: 0;
 }
 
-.menu {color: #3366CC;}
+.menu {color: #CC6600;}
 
 .dropit .dropit-trigger { position: relative; }
 .dropit .dropit-submenu {
