--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,9 @@ ul#nav li a
   -webkit-border: 7px 7px 7px 7px;
   text-align: center;
   color: #000;
-  text-decoration: none;} 
+  text-decoration: none;
+  transition:all linear 0.15s;
+} 
   
 ul#nav li.current a, ul#nav li:hover a
 { color: #FFF;
@@ -162,6 +164,17 @@ ul#nav li.current a, ul#nav li:hover a
   background: -o-linear-gradient(#222, #555);
   background: -webkit-linear-gradient(#222, #555);  
   text-shadow: none;}
+  
+.sub-menu {
+  z-index:-1;
+  opacity:0;
+  transition:opacity linear 0.15s;
+}
+
+nav li:hover .sub-menu {
+    z-index:1;
+    opacity:1;
+}
 
 #site_content
 { width: 940px;
