--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ ul#nav li.current a, ul#nav li:hover a
 .sub-menu {
   z-index:-1;
   opacity:0;
+  color:#FFFF99;
   transition:opacity linear 0.15s;
   display:block;
 }
