--- a/css/style.css
+++ b/css/style.css
@@ -166,16 +166,21 @@ ul#nav li.current a, ul#nav li:hover a
   text-shadow: none;}
   
 .sub-menu {
+  width:160%;
+  padding:5px 0px;
+  position:absolute;
+  top:100%;
+  left:0px;
   z-index:-1;
   opacity:0;
-  color:#FFFF99;
   transition:opacity linear 0.15s;
-  display:block;
+  box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+  background:#2e2728;
 }
 
 nav li:hover .sub-menu {
-    z-index:1;
-    opacity:1;
+  z-index:1;
+  opacity:1;
 }
 
 #site_content
