--- a/css/style.css
+++ b/css/style.css
@@ -176,11 +176,13 @@ ul#nav li.current a, ul#nav li:hover a
   transition:opacity linear 0.15s;
   box-shadow:0px 2px 3px rgba(0,0,0,0.2);
   background:#2e2728;
+  display:none;
 }
 
 ul#nav li:hover .sub-menu {
   z-index:1;
   opacity:1;
+  display:block;
 }
 
 #site_content
