--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ img
 h1, h2, h3, h4, h5, h6 
 { font: normal 250% 'News Cycle', Arial, sans-serif;
   color: #FFF;
+  text-shadow: 1px 1px #000;
   letter-spacing: -1px;
   margin: 0 0 10px 0;}
 
@@ -216,6 +217,7 @@ ul#nav li:hover .sub-menu {
 { float: left; 
   width: 300px;
   height: 150px;
+  overflow: hidden;
   margin: 0 20px 10px 0;
   padding: 10px;
   -moz-box-shadow:    inset 0 0 20px #ADADAD;
@@ -362,12 +364,13 @@ ul img {
  
 #slideshow-caption .slideshow-caption-container {
   padding: 10px 25px 10px 25px; 
-  background: transparent url(../images/transparent.png) repeat;  
+  background: transparent url(../images/transparent2.png) repeat;  
   z-index: 1000;}
  
 #slideshow-caption p {
   padding: 0;
   font: normal 130% arial, sans-serif;
-  color: #FFF;
-  text-shadow: 1px 1px #000;}
+  color: #000;
+  text-shadow: 1px 1px #000;
+  opacity:1}
  
