--- a/css/style.css
+++ b/css/style.css
@@ -1207,7 +1207,7 @@ Work Page Style
 .cd-intro-work-page {
   position: relative;
   height: 100%;
-  background: url(http://s30.postimg.org/w6qugldhr/projects_bg_img.gif) center center;
+  background: url(https://farm9.staticflickr.com/8057/8226451812_e197931e26_o_d.jpg) center center;
   background-size: cover;
   z-index: 1;
   -webkit-font-smoothing: antialiased;
@@ -1456,7 +1456,7 @@ Contact Page Style
 -------------------------------- */
 .cd-intro-contact {
   position: relative;
-  background: url(http://static.tumblr.com/1ccbc9v/tBPncd7pp/cd-content-contact-bg_img.jpg) no-repeat center center;
+  background: url(https://lh3.googleusercontent.com/hU98MfrRaaqc8AdUzAW3xxBs92FKEoz-8mSRDHmOUd2K2Ut9G31TXvqZKUMfeItUuLqbBhW0cS924kI4vjeUXX6aGlRBODE3IzMBnAWlqY1OstFqQVSq7l4jkfR-SlWLLBWStJUN2Qp-CGrcVIIxo_bGS4g5cyQD_oyXqSMm_Cn4IPQcGVaecukw-Xl3eEGdgbvmeqgCzyFaVbHhZeYA3xQ-kd6vb4oHYTYEDJUrrcgSPvuij9yWNb5RnCY3uE2zG9Fi2Qz8Udw3DRP6vR1uKokx71I1pAjii3GqUzNBzgpvRPiDmQCquWnxkDrni11NfE0i5nLwpEGoXhuJQWy-75DYazZQTYO92cLwpndAnKZUw1_LB4o-8JhiOYP_xddfHOWJbGL94IZJt82HjcOT5xIb8RATSF8k80TBrhWcRliuKEOhk2L4T_6TIVflLAZL_62oOh9J_3URblf8uBkhSz4pXjlJAmvIMvMWDKeL4o0qey8OWcQzw9GM96lriEr2ni10TFZGsfPAxvD6NyLZX-Fz7EIJCZOajcVjaZuHynb0-QfXlytPfDF7FBj4X7GntfIMLg=w1290-h685-no) no-repeat center center;
   background-size: cover;
   z-index: 1;
   -webkit-font-smoothing: antialiased;
@@ -1517,12 +1517,20 @@ Contact Page Style
 	color: white;
 	line-height: 2rem;
 	padding: 2rem;
+    margin-left: 2rem
+}
+.square-1 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+    height: auto;
 }
 .square-2 {
 	vertical-align: top;
 	width: 60%;
 	height: 300px;
-	background-image: url(https://unsplash.imgix.net/46/Ov6ZY1zLTWmhPC0wFysP_IMG_2896_edt.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=6518e4df89659818f6c0392175a9c5e6);
+	background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/70/Benton_County_Courthouse_Greg_Keene.jpg);
 	background-size: cover;
 	display: inline-block;
 }
@@ -1544,6 +1552,8 @@ Contact Page Style
 	display: inline-block;
 }
 .square-4 h2 {
+    width: auto;
+    font-size: 1.2rem;
 	color: white;
 	line-height: 2rem;
 	padding: 2rem;
