--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ The .cd-intro change the background image
 .cd-intro {
   position: relative;
   height: 100%;
-  background: url(https://static.pexels.com/photos/24529/pexels-photo.jpg) center center;
+  background: url(http://wf.is/wp-content/uploads/2014/03/Anna-Riegels-1.jpg) center center;
   background-size: cover;
   z-index: 1;
   -webkit-font-smoothing: antialiased;
