changed events.html to events/ and events/index.html

--- a/css/style.css
+++ b/css/style.css
@@ -568,9 +568,16 @@ Work Thumbnails
 	background-image: url(http://heydays.no/wp-content/uploads/2013/11/heydays_nora01-1440x900.jpg);
 	background-size: cover;
 	display: inline-block;
+    position: relative;
 }
 .cd-container-clmn-1:hover {
 	opacity: .5;
+}
+.cd-container-clmn-text {
+    color: white;
+    display: inline-block;
+    position: absolute;
+    font-size: 3rem;
 }
 .cd-container-clmn-2 {
 	width: 24.7%;
@@ -982,8 +989,7 @@ Project Page Style
 -------------------------------- */
 .cd-intro-project {
   position: relative;
-  height: 100%;
-  background: url(http://heydays.no/wp-content/uploads/2013/11/heydays_nora04-1440x900.jpg) no-repeat center center;
+  background: url(https://lh3.googleusercontent.com/1nT6NXJR6y1dB9GlE7GBSevYt3YINiGmAJXdaxDgG06WZ46PjfCiaZaNeIC2DM-UVkOcY6lVpEaAn6TnrXn-ib4mENzgE5W73ROtpM25x3ypYj1YHXSt6_aVL6-VNe9IRAEfLFcL3uvFZfj3Be3cd1NXQgYbcl0rcvok2UElzLNt808Ec250iC2kSU_i_iEVr5DP4ci9jQYimDcJBOa2Cr1zvgy19AqHvai9FdHfI-5BhUjJkwBjLiKGNfjqEyE6BNFFCN0i9nSaoTjTnHnZIjLliSp97dVlN2I03Tj0KMRauBQDfmaAfwAgop3hF2FVR9wKMAFZ9PPeVK8bP8KVAgGWmMhg2FszP6_OrZVsHYQWsEVG-yW1aeb0XrQjYe7SxcmqmnpjR9JNY82T-tgay_k0SGJoSKKagu3F5gA1U1Y5Ou5Gfp6o2wz27aZmbiTP-dGNCUFDjPD8Y--psqJcCKoR7Zv3LslF8JJbgBgEvwOeZcIZPf_BexBp_BTfPQO4ljMZF_yb75NjlGqE13Kxpi6Bifd71qNbAeWc2_Bj3qxeWT0Kds8zAOsjHenLRQCGVOSjdw=w1110-h439-no) no-repeat center center;
   background-size: cover;
   z-index: 1;
   -webkit-font-smoothing: antialiased;
@@ -1154,7 +1160,7 @@ Project Page Style
 }
 @media only screen and (min-width: 1170px) {
   .cd-intro-project {
-    height: 700px;
+    height: 400px;
   }
   .cd-intro-blog {
     height: 400px;
