--- a/css/style.css
+++ b/css/style.css
@@ -858,7 +858,7 @@ About Page Style
 .cd-intro-about {
   position: relative;
   height: 100%;
-  background: url(http://www.alcoholabusesupport.com/wp-content/uploads/2015/07/sober-communities..jpg) no-repeat center center;
+  background: url(https://pixabay.com/static/uploads/photo/2014/08/15/06/15/imprint-418593_960_720.jpg) no-repeat center center;
   background-size: cover;
   z-index: 1;
   -webkit-font-smoothing: antialiased;
