Updates the header image

--- a/static/css/animated-bg.css
+++ b/static/css/animated-bg.css
@@ -2,7 +2,7 @@
 .large-header {
 	position: relative;
 	width: 100%;
-	background-image: url(http://wf.is/wp-content/uploads/2014/03/Anna-Riegels-1.jpg);
+	background-image: url('../img/Willamette_River_at_Molalla_SP_eb.jpg');
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
